# uqmm

./: .gitignore  README.md  pyproject.toml
docs/: README.md  alpine-unattended.md  gotchas.md  qemu-control.md  rootless-tooling.md  tcg-slirp.md  ubuntu-autoinstall.md  unified-config.md
docs/design/: README.md  cli.md  config.md  distribution.md  toolchain.md
docs/implementation/01-qol/: README.md  RESULTS.md  phase-1-state-io.md  phase-2-launch.md  phase-3-input-validation.md  phase-4-rerunnable-create.md  phase-5-alpine-resume.md
docs/implementation/baseline/: README.md  phase-1-foundation.md  phase-2-cloud-image.md  phase-3-alpine.md  phase-4-lifecycle.md
docs/issues/: README.md  concurrency.md  config.md  post-create.md  retry.md
docs/research/: README.md  alpine-unattended.md  cloud-image.md  iso-install-fallback.md  qemu-control.md  rootless-tooling.md  tcg-slirp.md
src/uqmm/: __init__.py  alpine_drive.py  cli.py  config.py  discover.py  resolve.py  serve.py  ssh.py  state.py
src/uqmm/builders/: __init__.py  alpine.py  base.py  cloudimg.py
src/uqmm/qemu/: __init__.py  qmp.py  (+2 more)
tests/: test_alpine_answers.py  test_alpine_build.py  test_alpine_drive.py  test_cli.py  test_cloudimg_build.py  test_cloudimg_disk.py  test_cloudimg_render.py  test_cloudimg_seed.py  test_config.py  test_create_alpine.py  test_create_cloudimg.py  test_create_lock.py  test_discover.py  test_lifecycle.py  test_qemu_process.py  test_qemu_qmp.py  test_qemu_serial.py  test_resolve.py  test_serve.py  test_ssh.py  test_state.py
uqmm/: pyproject.toml
uqmm/src/uqmm/: __init__.py
