[project]
name = "uqmm"
version = "0.1.0"
description = "Headless QEMU machine manager for unattended Alpine/Debian/Ubuntu installs under TCG + SLiRP"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Thomas Li", email = "tli186@ucr.edu" }
]
dependencies = [
    "qemu.qmp>=0.0.6",
    "pexpect>=4.9",
    "cyclopts>=4.4",
    "pycdlib>=1.16",
    "httpx>=0.27",
    "rich>=13",
    "pyyaml>=6.0.3",
]

[project.scripts]
uqmm = "uqmm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uqmm"]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "basedpyright>=1.20",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "types-pyyaml",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
