[project]
name = "uqmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Li", email = "tli186@ucr.edu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
uqmm = "uqmm:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
